Fix wrapping of status labels

--- a/cp-styles/app/styles/legacy/_status-tag.scss
+++ b/cp-styles/app/styles/legacy/_status-tag.scss
@@ -19,6 +19,7 @@
 	font-size: 85%;
   text-transform: none;
 	border-radius: $border-radius-full;
+  white-space: nowrap;
 
 	// &::before {
 	// 	content: "";
